--- a/style.css
+++ b/style.css
@@ -1,48 +1,58 @@
+body {
+  font-family: "Open Sans", sans-serif;
+  color: #444444;
+}
+
+h1, h2, h3, h4, h5, h6, a {
+  font-family: "Raleway", sans-serif;
+}
+
+/* Navbar */
 .navbar {
     justify-content: center;
     position: sticky;
     top: 0;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 100; 
   }
-  
-  /* Navbar item hover effect */
-  .navbar-nav .nav-link {
+
+/* Navbar item hover effect */
+.navbar-nav .nav-link {
     padding: 8px 20px;
     transition: color 0.5s;
   }
   
-  .nav-link {
+.nav-link {
     color: rgb(255, 255, 255);
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight: 300;
   }
 
-  .navbar-nav .nav-link:hover {
+.navbar-nav .nav-link:hover {
     color: rgb(202, 202, 202);
     border-radius: 50%;
   }
 
+  
+/* Header CSS */
+header {
+    background-image: url(assets/home-bg.jpg);
+    background-color: rgba(0, 0, 0, 0.2);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#home {
+    color: white;
+    min-height: 100vh;
+  }
+  
 #mini-profile-container {
     width: 222px;
     height: 222px;
     border-radius: 50%;
-}
-
-/* Header CSS */
-
-header {
-  background-image: url(assets/home-bg.jpg);
-  background-color: rgba(0, 0, 0, 0.2);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-#home {
-  color: white;
-  min-height: 100vh;
-}
+  }
 
 #mini-profile {
   width: 100%;
@@ -57,7 +67,7 @@ header {
   width: 50%;
   margin: 0 auto;
   text-align: center;
-  animation: typing 5s steps(40) forwards, blink-caret 0.75s step-end forwards;
+  animation: typing 5s steps(40) forwards, blink-caret 0.75s step-end infinite;
 }
 
 @keyframes typing {
@@ -83,7 +93,7 @@ header {
   display: inline-block;
   position: relative;
   animation: moveUpAndDown 2s infinite;
-  font-size: 50px;
+  font-size: 40px;
   color: white;
 }
 
@@ -98,4 +108,53 @@ header {
   50% {
       top: 10px;
   }
+}
+
+/* About */
+#about, #skills {
+  background-color: #f1f1f1;
+  padding: 30px 0;
+}
+
+.row ul li a {
+  text-decoration: none;
+  font-family: "Open Sans", sans-serif;
+  color: #444444;
+}
+
+.skill {
+  position: relative;
+  margin-top: 15px;
+}
+
+.progress-bar {
+  background-color: #0073b6;
+  height: 20px; 
+}
+
+.skill .progress-bar::before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: -1;
+}
+
+.skill span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto 10px; 
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.skill-name {
+  font-size: 15px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
