--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ h1, h2, h3, h4, h5, h6, a {
     color: rgb(202, 202, 202);
     border-radius: 50%;
   }
-
   
 /* Header CSS */
 header {
@@ -67,7 +66,7 @@ header {
   width: 50%;
   margin: 0 auto;
   text-align: center;
-  animation: typing 5s steps(40) forwards, blink-caret 0.75s step-end infinite;
+  animation: typing 5s steps(40) forwards, blink-caret 0.75s step-end;
 }
 
 @keyframes typing {
@@ -110,8 +109,40 @@ header {
   }
 }
 
+/* CSS for Section Title */
+.section-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.section-title h2 {
+  position: relative;
+  display: inline;
+  font-weight: bold;
+}
+
+.section-title h2::before,
+.section-title h2::after {
+  content: "";
+  position: absolute;
+  height: 2px;
+  background-color: #555;
+  top: 50%;
+  width: 45%;
+}
+
+.section-title h2::before {
+  right: 100%;
+  margin-right: 10px;
+}
+
+.section-title h2::after {
+  left: 100%;
+  margin-left: 10px;
+}
+
 /* About */
-#about, #skills {
+#about, #skills, #portfolio {
   background-color: #f1f1f1;
   padding: 30px 0;
 }
@@ -158,3 +189,9 @@ header {
   font-weight: bold;
   margin-bottom: 5px;
 }
+
+.resume-item h4 {
+  margin-top: 30px;
+}
+
+/* Portfolio */
